# votr-backend

./: .dockerignore  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  test.ipynb
alembic/: env.py
alembic/versions/: 1f8c643f2b52_initial_migrationclear.py  2024_07_23_1258-69b310cfdf4e_initial_migration.py  ffb67b7f03b3_initial_migrationclear.py
app/: __init__.py  admin.py  main.py
app/api/: routes.py
app/api/v1/routes/: __init__.py  census.py  congress_members.py  elections.py  legislators.py  voters.py
app/api/v1/routes/constants/: constants.py
app/core/: config.py  constants.py  dependencies.py  logging_config.py  redis.py  utilities.py
app/core/analytics/: SponsoredLegislation.py  __init__.py
app/core/config/: __init__.py  config.py  logging_config.py
app/core/middleware/: __init__.py  user_sessions.py
app/core/redis/: __init__.py  redis_pool.py
app/core/security/: APIKeyLoggerRedactor.py  __init__.py  api_key_redactor.py  auth.py
app/core/utilities/: __init__.py  utilities.py
app/data/: __init__.py  database.py  session.py
app/data/models/: __init__.py  acs5.py  base.py  legislators.py
app/data/repositories/: base_repository.py  geocodio_repository.py  legislator_repository.py
app/db/: crud.py  crud_base.py  crud_congress_member.py  database.py  session.py
app/db/crud/: crud_acs5.py  crud_base.py  crud_congress_member.py
app/db/models/: __init__.py  acs5.py  base.py  base_model.py  bills.py  congress.py  congress_members.py
app/dependencies/: __init__.py  legislator_dependencies.py
app/graphql/: schema.py
app/graphql/resolvers/: __init__.py  acs5_resolver.py  congress_member_resolver.py  legislator_resolver.py
app/graphql/types/: acs5.py  congress_member.py  legislator_graphql_types.py
app/schemas/: __init__.py  acs5_schemas.py  legislator_schemas.py  security.py  voters_schemas.py
app/schemas/census/: acs5.py
app/schemas/congress/: __init__.py  congress_members.py
app/schemas/opensecrets/: __init__.py  schemas.py
app/schemas/voters/: voters.py
app/services/: ACS5Service.py  BaseAsyncAPIClient.py  BaseService.py  CongressAsyncAPIClient.py  CongressMemberService.py  FECAsyncAPIClient.py  GeocodioAsyncAPIClient.py  OpenSecretsAsyncAPIClient.py  __init__.py  base_service.py  legislator_service.py  voter_info_service.py
